# neme-anima

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  install_and_run.sh  pyproject.toml
frontend/: package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  bulkRetag.ts  bulkRetagActions.ts  frameOverwriteContext.ts  segmentEditor.ts  shortcuts.svelte.ts  sidecar.ts  tagList.ts  tagSearch.ts  tagVocabulary.svelte.ts  trainingPresets.ts  types.ts
frontend/tests/: api.test.ts  asyncLoad.test.ts  bulkRetag.test.ts  flash.test.ts  focusTrap.test.ts  shortcuts.test.ts  sidecar.test.ts  tagList.test.ts  tagListComponent.test.ts  tagSearch.test.ts  toasts.test.ts
src/neme_anima/: cli.py  config.py  dedup.py  extraction_cache.py  identify.py  isolated_runner.py  llm.py  pipeline.py  pipeline_progress.py  tag.py  tag_vocabulary.py  training.py  video.py
src/neme_anima/server/: app.py  events.py  queue.py  (+3 more)
tests/: test_cli.py  test_extraction_cache.py  test_pipeline_auto_delete_rejected.py  test_pipeline_e2e.py  test_pipeline_release_models.py  test_pipeline_thresholds_overrides.py  test_pipeline_wipe.py  test_storage_project.py  test_tag.py  test_training.py  test_video.py
tests/server/: test_api_bulk_convention.py  test_api_characters.py  test_api_deps.py  test_api_frames.py  test_api_projects.py  test_api_queue.py  test_api_refs.py  test_api_sources.py  test_api_tag_vocabulary.py  test_api_training.py  test_api_wipe_preview.py  test_app.py  test_cli_tags.py  test_cli_ui.py  test_deps.py  test_events.py  test_job_progress.py  test_queue.py  test_registry.py  test_static_spa.py  test_storage_sidecar.py  test_tag_review.py  test_tag_vocabulary.py  test_training_runner_state.py
(+59 files in other folders)
